[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Bullet_Rifle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/SingleRifleShot.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.05327, 4.71302 )

[node name="Bullet_Rifle" type="Area2D"]
script = ExtResource( 1 )
speed = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 99
texture = ExtResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.433

[connection signal="body_entered" from="." to="." method="_on_Bullet_Rifle_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
